# duck_talks

./: .gitignore  ARCHITECTURE.md  ONE_PAGER.md  README.md  claude_client.py  index.html  live.py  models.py  package-lock.json  package.json  repl_interface.py  server.py  tsconfig.app.json  tsconfig.server.json  vite.config.ts  watcher.py
.claude/commands/: init_app.md  init_project.md  test.md
.github/workflows/: publish.yml
.xcodebuildmcp/: config.yaml
api/: server.py
app/: project.yml
app/Reduck/: Info.plist  ReduckApp.swift
app/Reduck.xcodeproj/: project.pbxproj
app/Reduck/Models/: ContentBlock.swift  LiveTypes.swift  Message.swift  SessionInfo.swift
app/Reduck/Services/: ConverseClient.swift  (+1 more)
archive/: dev.sh  pyproject.toml
archive/reduck/: __init__.py  claude_client.py  cli.py  models.py  server.py
archive/vibecoded_apps_claude_talks/: package-lock.json  package.json
cc-relay/: ARCHITECTURE.md
docs/: conversation-structure.md  gemini-live-api-swift-reference.md  gemini-live-docs.md  gemini-live-feature-map.md  ios-codebase-guide.md  prompt-optimization.md  sound-design.md  swift-for-python-devs.md
reduck/: server.py
roadmap/todos/: correction_audio_storage.md  correction_llm_accuracy.md  go_back.md  websocket_close_errors.md
server/: claude_client.py  cli.py  server.py
src/client/: App.svelte  vite-env.d.ts
src/server/: claude-client.ts  cli.ts  routes.ts  test-sdk.ts
src/shared/: models.ts  types.ts
vibecoded_apps/: CLAUDE.md
vibecoded_apps/claude_talks/: index.html  package-lock.json  package.json  vite.config.ts
(+66 files in other folders)
